# sumologic-kubernetes-tools

./: .dockerignore  .travis.yml  Dockerfile  Dockerfile.chmod  Dockerfile.kubectl  Dockerfile.kubectl-ubi  Dockerfile.sumologic-mock  Makefile  README.md  docker-bake.hcl  renovate.json5
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_and_push_image.yml  build_binaries.yml  dev_builds.yml  pre_release_builds.yml  pull_requests.yml  release_builds.yml  renovate.yaml
.markdownlint/: style.rb
ci/: build.sh
deploy/docker/: Dockerfile
docs/: release.md
scripts/: test-image.sh
src/commands/: check  fix-log-symlinks  pvc-cleaner  template  template-dependency  tools-usage  upgrade-2.0
src/commands/template-prometheus-mixin/: template-prometheus-mixin
src/examples/: sumologic-pvc-cleaner-cronjob-serviceaccount.yaml  sumologic-pvc-cleaner-cronjob.yaml
src/go/: .gitignore  Makefile  go.mod  go.sum
src/go/cmd/connection-tester/: main.go  runner.py
src/go/cmd/customer-trace-tester/: main.go
src/go/cmd/k8s-api-test/: main.go
src/go/cmd/stress-tester/: main.go
src/go/cmd/test/: follows.go
src/go/cmd/update-collection-v3/: .gitignore  Makefile  README.md  events.go  events_test.go  main.go  main_test.go  migrate.go  migrate_test.go  valuesv2.go  valuesv3.go
src/go/cmd/update-collection-v3/helpers/: helpers.go  helpers_test.go
src/go/cmd/update-collection-v3/migrations/disable-thanos/: migrate.go  migrate_test.go
src/go/cmd/update-collection-v3/migrations/events/: events.go  events_test.go  migrate.go  valuesv2.go  valuesv3.go
src/go/cmd/update-collection-v3/migrations/events-config-merge/: migrate.go
src/go/cmd/update-collection-v3/migrations/falco-upgrade/: migrate.go  values.go
src/go/cmd/update-collection-v3/migrations/fluentd-autoscaling/: common.go  migrate.go  migrate_test.go  values_input.go  values_output.go
src/go/cmd/update-collection-v3/migrations/fluentd-logs-configs/: common.go  fluentd.go  migrate.go  values_input.go  values_output.go  valuesv2.go  valuesv3.go
src/go/cmd/update-collection-v3/migrations/kube-prometheus-stack-and-events/: events.go  events_test.go  migrate.go  migrate_test.go  valuesv2.go  valuesv3.go
src/go/cmd/update-collection-v3/migrations/kube-prometheus-stack-repository/: migrate.go  migrate_test.go
src/go/cmd/update-collection-v3/migrations/kube-state-metrics-collectors/: migrate.go  migrate_test.go  valuesv2.go  valuesv3.go
src/go/cmd/update-collection-v3/migrations/logformat/: migrate.go  migrate_test.go  values.go
src/go/cmd/update-collection-v3/migrations/logs-metadata-config/: migrate.go
src/go/cmd/update-collection-v3/migrations/logsmetadataconfig/: migrate.go
src/go/cmd/update-collection-v3/migrations/metrics-metadata-config/: migrate.go
src/go/cmd/update-collection-v3/migrations/metrics-server-upgrade/: migrate.go  migrate_test.go
src/go/cmd/update-collection-v3/migrations/otellogs-config-merge/: migrate.go
src/go/cmd/update-collection-v3/migrations/remove-load-config-file/: migrate.go
src/go/cmd/update-collection-v3/migrations/tailing-sidecar-operator-upgrade/: migrate.go  migrate_test.go
src/go/cmd/update-collection-v3/migrations/tracing-config/: migrate.go  values2.go  values3.go  values_input.go  values_output.go
src/go/cmd/update-collection-v3/migrations/tracing-objects-changes/: migrate.go  values2.go  values_input.go
src/go/cmd/update-collection-v3/migrations/tracing-replaces/: migrate.go  values2.go  values3.go  (+1 more)
src/go/cmd/update-collection-v3/testdata/: containerd-multiline.input.yaml  containerd-multiline.output.yaml  multiline.output.yaml  simple.input.yaml  simple.output.yaml  special-characters.input.yaml  special-characters.output.yaml  sumologic.output.yaml  tracing-replaces.input.yaml  tracing-replaces.output.yaml  tracing.input.yaml  tracing.output.yaml
src/k8s/: tools-pod.yaml
src/rust/: .rustfmt.toml
src/rust/logs-generator/: .gitignore  Cargo.toml  Makefile  README.md
src/rust/logs-generator/src/: main.rs
src/rust/receiver-mock/: .gitignore  Cargo.toml  Makefile  README.md
src/rust/receiver-mock/src/: logs.rs  main.rs  metadata.rs  metrics.rs  options.rs  print.rs  router.rs  statistics.rs  time.rs
src/rust/receiver-mock/src/logs/: mod.rs
src/rust/receiver-mock/src/metrics/: mod.rs
src/rust/receiver-mock/src/router/: api.rs  mod.rs  otlp.rs  terraform.rs  traces_data.rs
src/rust/receiver-mock/src/traces/: mod.rs
src/rust/sumologic-mock/: Cargo.toml  Makefile  README.md
src/rust/sumologic-mock/.cargo/: config.toml
src/rust/sumologic-mock/src/: main.rs  metadata.rs
src/rust/sumologic-mock/src/metrics/: sample.rs
src/rust/sumologic-mock/src/router/: metrics_data.rs  mod.rs  otlp.rs  terraform.rs  traces_data.rs
src/rust/sumologic-mock/src/traces/: mod.rs
(+48 files in other folders)
