[package]
name = "receiver-mock"
version = "0.1.0"
authors = ["Sumo Logic <collection@sumologic.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-http = "3.3.1"
actix-service = "1"
actix-rt = "2"
anyhow = "1.0.71"
bytes = "1"
base64 = "0.21"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.1.11", features = ["derive"]}
timer = "0.2"
chrono = { version = "0.4", features = ["serde"] }
json_str = "*"
rand = "0.8"
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs", rev = "a4574e9bade29b8af31e68b68a5392c61cbb74cd" }
http = "0.2"
opentelemetry-proto = { version = "0.1.0", features = ["gen-tonic", "build-server", "logs", "metrics", "traces"] }
prost = "0.11.0"
itertools = "0.10.5"
log = "0.4.17"
simple_logger = "4.1.0"
hex = "0.4.3"
fancy-regex = "0.11.0"
