[package]
name = "receiver-mock"
version = "0.1.0"
authors = ["Sumo Logic <collection@sumologic.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-http = "3.5.1"
actix-service = "1"
actix-rt = "2"
anyhow = "1.0.79"
bytes = "1"
base64 = "0.21"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.110"
clap = { version = "4.4.13", features = ["derive"]}
timer = "0.2"
chrono = { version = "0.4", features = ["serde"] }
json_str = "*"
rand = "0.8"
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs", version = "0.2.4" }
opentelemetry-proto = { version = "0.3.0", features = ["gen-tonic", "logs", "metrics", "traces"] }
prost = "0.11.0"
itertools = "0.12.0"
log = "0.4.20"
simple_logger = "4.3.3"
hex = "0.4.3"
fancy-regex = "0.13.0"
