[package]
name = "sumologic-mock"
version = "0.1.0"
authors = ["Sumo Logic <collection@sumologic.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
actix-http = "3.7.0"
actix-service = "2"
actix-rt = "2"
anyhow = "1.0.86"
bytes = "1"
base64 = "0.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.6", features = ["derive"]}
timer = "0.2"
chrono = { version = "0.4", features = ["serde"] }
json_str = "*"
rand = "0.8"
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs", version = "0.2.4" }
opentelemetry-proto = { version = "0.6.0", features = ["gen-tonic", "logs", "metrics", "trace"] }
prost = "0.12.6"
itertools = "0.13.0"
log = "0.4.21"
simple_logger = "5.0.0"
hex = "0.4.3"
fancy-regex = "0.13.0"
